Fix vertical alignment of upload infos in overview

--- a/assets/css/upload-overview.scss
+++ b/assets/css/upload-overview.scss
@@ -52,6 +52,7 @@ main {
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      justify-content: flex-end;
       aspect-ratio: 1 / 1;
       border-radius: 10px;
       box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
